# enki

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Doxyfile  Jenkinsfile  LICENSE  README.md  changelog  enkiConfig.cmake.in
debian/: changelog  control  copyright  rules
doc/: Doxyfile.in
docsource/: codingconventions.dox  install.dox
enki/: BluetoothBase.cpp  BluetoothBase.h  CMakeLists.txt  Colliders.cpp  Colliders.h  Component.h  Entity.cpp  Entity.h  Geometry.cpp  Geometry.h  Interaction.h  Network.cpp  Network.h  PhysicalEngine.cpp  PhysicalEngine.h  Random.h  RigidBodyPhysics.cpp  RigidBodyPhysics.h  Serialize.cpp  Serialize.h  System.cpp  System.h  Types.cpp  Types.h  World.cpp  World.h
enki/interactions/: ActiveSoundSource.cpp  ActiveSoundSource.h  Bluetooth.cpp  Bluetooth.h  CircularCam.cpp  CircularCam.h  GroundSensor.cpp  GroundSensor.h  IRSensor.cpp  IRSensor.h  Microphone.cpp  Microphone.h
enki/robots/: DifferentialWheeled.cpp  DifferentialWheeled.h
enki/robots/alice/: Alice.cpp  Alice.h  AliceCam.cpp  AliceCommunication.cpp  AliceCommunication.h
enki/robots/e-puck/: EPuck.cpp  EPuck.h
enki/robots/khepera/: Khepera.cpp  Khepera.h
enki/robots/marxbot/: Marxbot.cpp  Marxbot.h
enki/robots/s-bot/: Sbot.cpp  Sbot.h  SbotObject.cpp  SbotObject.h
enki/robots/thymio2/: Thymio2.cpp  Thymio2.h
examples/: CMakeLists.txt  enkiTest.cpp
examples/minimal/: CMakeLists.txt  enkiMinimal.cpp
examples/playground/: CMakeLists.txt  Playground.cpp
libenki/: AUTHORS  CMakeLists.txt  Doxyfile  FindAseba.cmake  INSTALL  LICENSE  Makefile.am  README  bootstrap  configure.in  makesuperclean  prebuilt-configure
libenki/aseba/: AsebaMarxbot.cpp  AsebaMarxbot.h  CMakeLists.txt  Network.cpp  Network.h
libenki/docsource/: Makefile.am  codingconventions.dox  cookbook.dox  install.dox
libenki/enki/: BluetoothBase.cpp  BluetoothBase.h  CMakeLists.txt  Geometry.h  Interaction.h  Makefile.am  PhysicalEngine.cpp  PhysicalEngine.h  Random.h  Types.cpp  Types.h
libenki/enki/interactions/: ActiveSoundSource.cpp  ActiveSoundSource.h  Bluetooth.cpp  Bluetooth.h  CircularCam.cpp  CircularCam.h  FullCircleCamera.cpp  FullCircleCamera.h  IRSensor.cpp  IRSensor.h  Makefile.am  Microphone.cpp  Microphone.h
libenki/enki/interactions/deprecated/: Loudspeaker.cpp  Loudspeaker.h
libenki/enki/robots/: DifferentialWheeled.cpp  DifferentialWheeled.h  Makefile.am
libenki/enki/robots/alice/: Alice.cpp  Alice.h  AliceCam.cpp  AliceCam.h  AliceCommunication.cpp  AliceCommunication.h  Makefile.am
libenki/enki/robots/e-puck/: EPuck.cpp  EPuck.h  Makefile.am
libenki/enki/robots/khepera/: Khepera.cpp  Khepera.h  Makefile.am
libenki/enki/robots/marxbot/: Marxbot.cpp  Marxbot.h
libenki/enki/robots/mav/: Makefile.am  Mav.cpp  Mav.h  MavCommunication.cpp  MavCommunication.h  MavMessage.cpp  MavMessage.h
libenki/enki/robots/s-bot/: ActiveSoundObject.cpp  ActiveSoundObject.h  Makefile.am  Sbot.cpp  Sbot.h  SbotCam.cpp  SbotCam.h  SbotObject.cpp  SbotObject.h
libenki/examples/: CMakeLists.txt  Makefile.am  asebaTest.cpp  enkitest.cpp  testenki.cpp
libenki/exec/: main.cpp
python/: CMakeLists.txt  enki.cpp  test-gui.py  test.py
rpm/: README.txt  enki.spec
tests/: CMakeLists.txt  Randomizer.cpp  Randomizer.h  Randomizer2.cpp  Randomizer2.h  WorldGenerator.cpp  WorldGenerator.h  catch.cpp  enkiTestBDD.cpp  enkiTestWorld.cpp  network.cpp  randomWorld.cpp  serialization.cpp  serializationBenchmarks.cpp  test-geometry.cpp  testGeometry.cpp  testRandom.cpp
tools/: compute_ir_sensors_params.py  compute_ir_sensors_ray_weights.py
viewer/: CMakeLists.txt  EPuckModel.cpp  EPuckModel.h  MarxbotModel.cpp  MarxbotModel.h  Playground.cpp  Playground.h  PlaygroundNetwork.cpp  PlaygroundServer.cpp  Studio.cpp  Thymio2Model.cpp  Thymio2Model.h  Viewer.cpp  Viewer.h  enki-viewer-textures.qrc
viewer/objects/: EPuckBody.cpp  EPuckRest.cpp  EPuckRing.cpp  EPuckWheelLeft.cpp  EPuckWheelRight.cpp  MarxbotBase.cpp  MarxbotWheel.cpp  Objects.h  Thymio2Body.cpp  Thymio2Wheel.cpp  marxbot-base.cpp  marxbot-wheel.cpp
