#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT(libenki, svn, nct@ysagoon.com)
AC_CONFIG_SRCDIR([enki/PhysicalEngine.cpp])
AM_INIT_AUTOMAKE(libenki, svn)

# Set flags
CXXFLAGS="$CXXFLAGS -Wall"

# Checks for programs.
AC_LANG([C++])
AC_PROG_CXX
AC_PROG_RANLIB

# Check for an
AC_CHECK_HEADER([an/Geometry.h],,AC_MSG_ERROR([An library not found. Please install An library. Configure aborted]))

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
LIBS="-lan $LIBS"
AC_TRY_LINK([#include <an/Types.h>],[An::Color c = An::Color::red;],
        [AC_MSG_NOTICE([checking for liban test program, working])],
        [AC_MSG_ERROR([An library not found. Please install An library. Configure aborted])])


AC_CONFIG_FILES([Makefile
				 enki/Makefile
				 enki/interactions/Makefile
				 enki/robots/Makefile
				 enki/robots/khepera/Makefile
				 enki/robots/alice/Makefile
				 enki/robots/s-bot/Makefile
				 enki/robots/mav/Makefile
				 enki/robots/e-puck/Makefile
				 docsource/Makefile
				 examples/Makefile])
AC_OUTPUT
