#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT(libenki, 1.1)
AC_CONFIG_SRCDIR([enki/PhysicalEngine.cpp])
AM_INIT_AUTOMAKE(libenki, 1.1)
AM_CONFIG_HEADER(config.h)

# We do not use datarootdir, so we skip its check
AC_DEFUN([AC_DATAROOTDIR_CHECKED])

# Set flags
CXXFLAGS="$CXXFLAGS -Wall"

# Checks for programs.
AC_LANG([C++])
AC_PROG_CXX
AC_PROG_RANLIB

AC_CONFIG_FILES([Makefile
				 enki/Makefile
				 enki/interactions/Makefile
				 enki/robots/Makefile
				 enki/robots/khepera/Makefile
				 enki/robots/alice/Makefile
				 enki/robots/s-bot/Makefile
				 enki/robots/e-puck/Makefile
				 docsource/Makefile
				 examples/Makefile])
AC_OUTPUT
