SUBDIRS = interactions robots

lib_LIBRARIES = libenkicore.a

INCLUDES = -I@srcdir@/../

libenkicore_a_SOURCES = Types.cpp PhysicalEngine.cpp BluetoothBase.cpp

library_includedir=$(includedir)/enki

library_include_HEADERS = Types.h Random.h Geometry.h Interaction.h PhysicalEngine.h BluetoothBase.h
