lib_LIBRARIES = libenkiinteractions.a

libenkiinteractions_a_SOURCES = IRSensor.cpp CircularCam.cpp Microphone.cpp Bluetooth.cpp ActiveSoundSource.cpp

INCLUDES = -I@srcdir@/../../

library_includedir = $(includedir)/enki/interactions

library_include_HEADERS = IRSensor.h CircularCam.h Microphone.h Bluetooth.h ActiveSoundSource.h
